# VowCut

./: .gitignore  README.md
backend/: __init__.py  app.py  config.py  jobrunner.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/pipeline/: __init__.py  accel.py  align.py  assemble.py  cache.py  director_v1.py  export.py  features.py  ingest.py  music.py  proxies.py  types.py  utils.py  validate.py
backend/schemas/: manifest.schema.json  timeline.schema.json
backend/tests/: conftest.py
backend/tests/integration/: test_export.py  test_features.py  test_pipeline.py  test_proxies.py
backend/tests/integration/fixtures/: sample_manifest.json
backend/tests/unit/: test_accel.py  test_align.py  test_assemble.py  test_cache.py  test_director.py  test_features.py  test_music.py  test_utils.py
docs/: architecture.md  gpu-encode.md  manifest-schema.md  pipeline-contracts.md
electron/: package.json  tsconfig.json
electron/main/: file-utils.ts  ipc-handlers.ts  main.ts  preload.ts  server-manager.ts
electron/renderer/: App.tsx  index.html  index.tsx
electron/renderer/api/: backend.ts
electron/renderer/components/: ExportReview.tsx  FileDropZone.tsx  GpuBadge.tsx  PipelineProgress.tsx  SettingsPanel.tsx
electron/renderer/hooks/: useJob.ts  useProgress.ts
electron/renderer/store/: jobStore.ts
electron/renderer/types/: manifest.ts
scripts/: build_backend.sh  check_gpu.py  gen_test_clip.py  run_golden.py  setup.ps1  setup.sh
